--- a/bunz_sequel/Gemfile
+++ b/bunz_sequel/Gemfile
@@ -3,9 +3,11 @@ source 'https://rubygems.org'
 gem 'sinatra'
 gem 'sequel'
 gem 'sqlite3'
+gem 'haml'
 
 group :development do
 	require 'shotgun'
 	require 'debugger'
+	require 'tux'
 	require 'ap'
 end
