move rabbit class to lib

--- a/bunz_active_record/Gemfile
+++ b/bunz_active_record/Gemfile
@@ -5,7 +5,7 @@ gem "sqlite3"
 gem "activerecord"
 gem "sinatra-activerecord"
 gem "rake"
-gem 'haml'
+gem "haml"
 
 group :development do
   gem "shotgun"
